# BigData

spark/python/app-nyc-taxi-analyzer/: .flake8  README.rst  coverage.xml  pyproject.toml  run.py
spark/python/app-nyc-taxi-analyzer/docs/source/: conf.py
spark/python/app-nyc-taxi-analyzer/src/jobs/: __init__.py  extract.py  load.py  main.py  transform.py  transform_trip_data.py  transform_weather_data.py
spark/python/app-nyc-taxi-analyzer/src/jobs/utils/: general.py
spark/python/app-nyc-taxi-analyzer/src/resources/conf/: app-nyc-taxi-analyzer.ini
spark/python/app-nyc-taxi-analyzer/src/resources/data/nyc_trip/: yellow_tripdata_subset_2014-01.csv
spark/python/app-nyc-taxi-analyzer/src/resources/data/output/error/trip/: part-00000-f551ab68-9302-4e72-9970-7dd7a58aeb01-c000.csv
spark/python/app-nyc-taxi-analyzer/src/resources/data/output/error/weather/: part-00000-fea76094-00db-4e0c-93b2-3ba8dade4cbf-c000.csv
spark/python/app-nyc-taxi-analyzer/src/resources/data/output/success/: part-00000-da163823-1d3d-4703-bbf8-87c6fdae29ae-c000.csv
spark/python/app-nyc-taxi-analyzer/tests/integration/: test_transform.py
spark/python/app-nyc-taxi-analyzer/tests/resources/conf/: someconfigfile.ini
spark/python/app-nyc-taxi-analyzer/tests/resources/data/expected_output/: error_trip.csv
spark/python/app-nyc-taxi-analyzer/tests/resources/data/input/test_extract/: some_csv_file1.csv  some_csv_file2.csv
spark/python/app-nyc-taxi-analyzer/tests/unit/: conftest.py  test_extract.py  test_general.py  test_transform.py  test_transform_trip_data.py  test_transform_weather_data.py
(+70 files in other folders)
