[tool.poetry]
name = "app-nyc-taxi-analyzer"
version = "1.0.0"
description = "An app to do analysis for newyork city taxi data."
authors = ["truptipradhan86@gmail.com"]
license = "public"

[tool.poetry.dependencies]
python = "^3.8"
typer = "^0.4.0"

[tool.poetry.dev-dependencies]
Sphinx = "^4.3.1"
flake8 = "^3.9.2"
pytest = "^6.2.5"
pyspark = "^3.1.2"
coverage = "^6.1"
black = "^21.10b0"
bandit = "^1.7.0"
flake8-annotations = "^2.7.0"
flake8-docstrings = "^1.6.0"
mypy = "^0.910"
pytest-mock = "^3.6.1"
pandas = "^1.3.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
